--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -587,7 +587,7 @@ jobs:
         
     - name: Load custom feeds
       run: |
-        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        #[ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
