--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -185,7 +185,7 @@ jobs:
           echo "COMMIT_TIME=auto update config: $(date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
 
       - name: Git Auto Update Config
-        uses: stefanzweifel/git-auto-commit-action@v5.0.0
+        uses: stefanzweifel/git-auto-commit-action@master
         id: commit
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
