--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -127,7 +127,9 @@ jobs:
       run: |
         echo ${{ steps.getHash.outputs.commitHash_x86_64_op515 }} | tee .commitHash_x86_64_op515
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
-  job_init: 
+  job_init:
+    needs: [Checka]
+    if: ${{ needs.Checka.outputs.output != 'hello' }}
     runs-on: ubuntu-latest
     name: Build-Init
     outputs:
