--- a/.github/workflows/Build_X86_64-Lede_1806.yml
+++ b/.github/workflows/Build_X86_64-Lede_1806.yml
@@ -107,7 +107,8 @@ jobs:
       run: |
         echo ${{ steps.getHash.outputs.commitHash_x86 }} | tee .commitHash_x86
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
-  job_init: 
+  job_init:
+    needs: [Checka]
     runs-on: ubuntu-latest
     name: Build-Init
     outputs:
@@ -124,12 +125,14 @@ jobs:
         uses: actions/checkout@main
 
       - name: Clone Source Code
+        if: ${{ needs.Checka.outputs.output != 'hello' }}
         working-directory: /workdir
         run: |
           git clone $REPO_URL -b $REPO_BRANCH openwrt
           ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
       - name: Load Custom Feeds
+        if: ${{ needs.Checka.outputs.output != 'hello' }}
         run: |
           [ -e $FEEDS_CONF ] && cp -r $FEEDS_CONF openwrt/feeds.conf.default
           chmod +x $DIY_P1_SH
@@ -137,12 +140,15 @@ jobs:
           $GITHUB_WORKSPACE/$DIY_P1_SH
 
       - name: Update Feeds
+        if: ${{ needs.Checka.outputs.output != 'hello' }}
         run: cd openwrt && ./scripts/feeds update -a
 
       - name: Install Feeds
+        if: ${{ needs.Checka.outputs.output != 'hello' }}
         run: cd openwrt && ./scripts/feeds install -a
 
       - name: Make Defconfig Custom Configuration
+        if: ${{ needs.Checka.outputs.output != 'hello' }}
         run: |
           chmod +x $DIY_P2_SH
           cd openwrt
@@ -165,7 +171,8 @@ jobs:
           echo "COMMIT_TIME=auto update config: $(date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
 
       - name: Git Auto Update Config
-        uses: stefanzweifel/git-auto-commit-action@v5.0.0
+        if: ${{ needs.Checka.outputs.output != 'hello' }}
+        uses: stefanzweifel/git-auto-commit-action@master
         id: commit
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
