--- a/.github/workflows/ARMv8_ROOTFS-Lede.yml
+++ b/.github/workflows/ARMv8_ROOTFS-Lede.yml
@@ -95,7 +95,7 @@ jobs:
           echo "COMMIT_TIME=Auto update config: $(date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
 
       - name: Git Auto Update Config
-        uses: stefanzweifel/git-auto-commit-action@v5.0.0
+        uses: stefanzweifel/git-auto-commit-action@master
         id: commit
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
