--- a/.github/workflows/Build-immo-toolchain.yml
+++ b/.github/workflows/Build-immo-toolchain.yml
@@ -118,7 +118,7 @@ jobs:
         echo "CACHE_NAME=$CACHE_NAME" >>$GITHUB_ENV
         #CACHE_URL=$(curl -sL api.github.com/repos/$GITHUB_REPOSITORY/releases | awk -F '"' '/download_url/{print $4}' | grep $CACHE_NAME) || true
         CACHE_URL="https://github.com/$GITHUB_REPOSITORY/releases/download/toolchain-cache/$CACHE_NAME.tzst"
-        curl -Isf $CACHE_URL >/dev/null 2>&1 || echo "REBUILD_TOOLCHAIN=true" >>$GITHUB_OUTPUTT
+        curl -Isf $CACHE_URL >/dev/null 2>&1 || echo "REBUILD_TOOLCHAIN=true" >>$GITHUB_OUTPUT
 
     - name: Install Feeds
       if: steps.hash.outputs.REBUILD_TOOLCHAIN == 'true'
