--- a/config/immo_config/armv8.config
+++ b/config/immo_config/armv8.config
@@ -5531,6 +5531,7 @@ CONFIG_PACKAGE_luci-app-eqos=y
 # CONFIG_PACKAGE_luci-app-fileassistant is not set
 CONFIG_PACKAGE_luci-app-filebrowser=y
 # CONFIG_PACKAGE_luci-app-filebrowser-go is not set
+CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-frps=y
