--- a/config/lede_config/x86-2305-docker.config
+++ b/config/lede_config/x86-2305-docker.config
@@ -5424,7 +5424,7 @@ CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE_CM=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-ua2f is not set
 # CONFIG_PACKAGE_luci-app-udpxy is not set
-# CONFIG_PACKAGE_luci-app-uhttpd is not set
+CONFIG_PACKAGE_luci-app-uhttpd=y
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic is not set
 # CONFIG_PACKAGE_luci-app-unbound is not set
 CONFIG_PACKAGE_luci-app-upnp=y
