--- a/.github/workflows/Build_X86_64-Lede_1806.yml
+++ b/.github/workflows/Build_X86_64-Lede_1806.yml
@@ -410,6 +410,7 @@ jobs:
       run: |
         cd openwrt
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -721,6 +722,7 @@ jobs:
       run: |
         cd openwrt
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -1032,6 +1034,7 @@ jobs:
       run: |
         cd openwrt
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -1345,6 +1348,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -1657,6 +1661,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -1973,6 +1978,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
