--- a/.github/workflows/Build_X86_64-Lede_2305.yml
+++ b/.github/workflows/Build_X86_64-Lede_2305.yml
@@ -405,6 +405,7 @@ jobs:
       run: |
         cd openwrt
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -717,6 +718,7 @@ jobs:
       run: |
         cd openwrt
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -1031,6 +1033,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -1344,6 +1347,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
@@ -1661,6 +1665,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
 
     - name: Organize files
